--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/iFelani/techno-shop/issues"
   },
-  "homepage": "https://github.com/iFelani/techno-shop#readme"
+  "homepage": "https://github.com/iFelani/techno-shop#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
