--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
