--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,11 @@
   },
   "homepage": "https://github.com/iFelani/techno-shop#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "yup": "^1.3.3"
   },
