--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/meysamhazrati/techno-shop#readme",
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
