--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.7",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
