--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.7",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
