--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,10 @@
   },
   "homepage": "https://github.com/meysamhazrati/techno-shop#readme",
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "ckeditor5": "^42.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
