--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "react",
     "mongo"
   ],
-  "author": "MeySaM HaZraTi",
+  "author": "Meysam Hazrati",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/meysamhazrati/techno-shop/issues"
